# fha_data_manager

./: .gitignore  AGENTS.md  AGENTS.txt  CATEGORICAL.md  README.md  REORGANIZATION_SUMMARY.md  SUGGESTED_EXTENSIONS.md  analyze_fha_data.py  analyze_institution_mappings.py  analyze_institution_mappings_polars.py  analyze_name_changes.py  analyze_name_oscillations.py  browse_combined_sf_file.py  check_common_ids.py  check_originator_ids.py  config.py  download_fha_data.py  example_download_snapshots.py  example_import_snapshots.py  example_load_data.py  import_fha_data.py  log_data_inventory.py  mtgdicts.py  pyproject.toml  save_clean_snapshots_to_db.py  suggestions.md  test_fha_data.py
data/: data_inventory.csv
deprecated/: download_fha_data.py  import_fha_data.py
docs/: README.md
docs/api/: README.md
docs/development/: contributing.md
docs/schemas/: data_dictionaries.md
docs/usage/: analysis.md  data_pipeline.md  validation.md
examples/: 01_download_data.py  02_import_and_clean.py  02a_import_and_clean_polars.py  03_load_and_query.py  04_validate_data.py  05_analyze_data.py  06_network_analysis.py  07_geographic_analysis.py  08_hhi_analysis.py  README.md  temp_browse_hecm_data.py
fha_data_manager/: __init__.py  download.py  download_cli.py  import_cli.py  import_data.py
output/: institution_analysis_report.txt  institution_crosswalk.csv  institution_mapping_errors.csv  validation_test.csv
tests/: README.md  __init__.py  conftest.py  test_analysis.py  test_import_data.py  test_utils.py  test_validation.py  test_versioning.py
(+331 files in other folders)
