[project]
name = "fha-data-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pyarrow>=19.0.1",
    "python-decouple>=3.8",
    "requests>=2.32.3",
]
