[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fha-data-manager"
version = "0.1.0"
description = "A project for downloading, cleaning, and storing publicly available FHA datasets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastexcel>=0.0.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pyarrow>=19.0.1",
    "python-decouple>=3.8",
    "requests>=2.32.3",
    "networkx>=3.3",
    "matplotlib>=3.10.7",
    "plotly>=6.3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fha_data_manager*"]
